--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -25,7 +25,11 @@ body {
   display: flex;
   justify-content: space-between;
   background-color: #f6f7f8;
-  position: relative;
+}
+
+.content {
+  padding: 2rem;
+  width: 100%;
 }
 
 /************************/
@@ -69,6 +73,8 @@ body {
   background-color: var(--color-light);
   color: white;
   border: none;
+  text-decoration: none;
+  text-align: center;
 }
 
 /************************/
@@ -111,6 +117,8 @@ input:focus {
   padding: 2.2rem;
   margin: 2rem;
   z-index: 99999;
+  transition: all 0.7s;
+  /* width: 23%; */
 }
 
 .sidebar p {
@@ -148,6 +156,7 @@ input:focus {
   width: 2rem;
 }
 
+/* Active Sidebar */
 .active-sidebar {
   background: linear-gradient(
     270deg,
@@ -169,6 +178,58 @@ input:focus {
 
 .active-sidebar svg path {
   fill: #ffffff;
+}
+
+/* PLAN C - SIDEBAR HOVER */
+/* .sidebar-link:hover {
+  background: linear-gradient(
+    270deg,
+    var(--color-light),
+    var(--color-medium),
+    var(--color-dark)
+  );
+  padding: 1.2rem 0 1.2rem 1rem;
+  width: 22rem;
+  border-radius: 0.3rem;
+  margin-bottom: 0.8rem;
+  z-index: 999;
+}
+
+.sidebar-link:hover a {
+  color: #ffffff;
+  justify-content: start;
+}
+
+.sidebar-link:hover svg path {
+  fill: #ffffff;
+} */
+
+/* Mobile Sidebar */
+.sidebar-phone {
+  height: 5rem;
+  border: none;
+  background-color: white;
+  border: 1px solid #f6f7f8;
+  box-shadow: 0rem 0.3rem 0.6rem 0rem rgba(0, 0, 0, 0.08);
+  border-radius: 0rem 0.5rem 0.5rem 0rem;
+  padding: 1rem;
+  position: fixed;
+  z-index: 999999;
+  top: 2rem;
+  left: 0;
+  display: none;
+  transition: all 0.3s;
+}
+
+.sidebar-phone-icon-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sidebar-phone-icon {
+  width: 3rem;
+  height: 3rem;
 }
 
 /************************/
@@ -266,7 +327,7 @@ input:focus {
   width: 4rem;
 }
 
-.icon-btn-mobile[name="btn-close"] {
+.btn-close-mobile-nav {
   cursor: pointer;
   display: none;
   position: absolute;
