--- a/assets/css/landingpage.css
+++ b/assets/css/landingpage.css
@@ -9,6 +9,16 @@
 
 .section {
   padding: 4rem;
+  transition: transform 1s, opacity 1s;
+}
+
+.testimoni-section {
+  margin-bottom: 5rem;
+}
+
+.section--hidden {
+  opacity: 0;
+  transform: translateY(8rem);
 }
 
 /************************/
@@ -208,4 +218,211 @@
 
 .footer-link-landingpage a {
   color: #fff !important;
+}
+
+/************************/
+/* TENTANG SECTION */
+/************************/
+.container-deskripsi-tentang-kami {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 6rem;
+}
+
+.deskripsi-tentang-kami {
+  text-align: center;
+  width: 70%;
+  font-size: 1.6rem;
+}
+
+.artikel-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 4rem;
+}
+
+.artikel-card {
+  width: 100%;
+  border-radius: 9px;
+  overflow: hidden;
+
+  background: linear-gradient(
+    135deg,
+    rgba(255, 255, 255, 0.1),
+    rgba(255, 255, 255, 0)
+  );
+  box-shadow: 0rem 0.6rem 0.6rem 0rem rgba(0, 0, 0, 0.08);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  transition: all 0.5s;
+}
+
+.artikel-card:hover {
+  transform: translateY(-3rem);
+}
+
+.artikel-img {
+  margin-bottom: 1rem;
+  width: 100%;
+}
+
+.artikel-content {
+  padding: 2rem;
+}
+
+.keterangan-artikel {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 1.2rem;
+  margin-bottom: 1.4rem;
+}
+
+.tag-artikel {
+  padding: 0.4rem 0.8rem;
+  border-radius: 15px;
+  font-weight: 700;
+  background-color: #fff;
+  color: var(--color-dark);
+}
+
+.judul-artikel {
+  font-size: 1.6rem;
+  font-weight: 600;
+  margin-bottom: 0.8rem;
+}
+
+.link-artikel:link,
+.link-artikel:visited {
+  color: #fff;
+  font-size: 1.2rem;
+}
+
+.link-artikel:hover,
+.link-artikel:active {
+  color: var(--color-light);
+}
+
+/************************/
+/* TESTIMONI SECTION */
+/************************/
+.slider {
+  max-width: 100rem;
+  height: 30rem;
+  margin: 0 auto;
+  position: relative;
+
+  /* IN THE END */
+  overflow: hidden;
+}
+
+.slide {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  /* THIS creates the animation! */
+  transition: transform 1s;
+}
+
+.slide > img {
+  /* Only for images that have different size than slide */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.dots {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-30%);
+  display: flex;
+}
+
+.dots__dot {
+  border: none;
+  background-color: #b9b9b9;
+  opacity: 0.7;
+  height: 1rem;
+  width: 1rem;
+  border-radius: 50%;
+  margin-right: 1.75rem;
+  cursor: pointer;
+  transition: all 0.5s;
+
+  /* Only necessary when overlying images */
+  /* box-shadow: 0 0.6rem 1.5rem rgba(0, 0, 0, 0.7); */
+}
+
+.dots__dot:last-child {
+  margin: 0;
+}
+
+.dots__dot--active {
+  /* background-color: #fff; */
+  background-color: #888;
+  opacity: 1;
+}
+
+.testimonial {
+  background: linear-gradient(
+    135deg,
+    rgba(255, 255, 255, 0.1),
+    rgba(255, 255, 255, 0)
+  );
+  box-shadow: 0rem 0.6rem 0.6rem 0rem rgba(0, 0, 0, 0.08);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  transition: all 0.5s;
+  padding: 3rem;
+  border-radius: 9px;
+}
+
+.testimonial__author {
+  display: flex;
+  gap: 3rem;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 1rem;
+}
+
+.testimonial__profile {
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
+}
+
+.image-profile-testi {
+  width: 10%;
+}
+.image-profile-testi img {
+  width: 100%;
+}
+
+.testimonial__name {
+  font-size: 2.4rem;
+  font-weight: 700;
+}
+
+.testimonial__pekerjaan {
+  font-size: 1.4rem;
+  margin-bottom: 1.4rem;
+}
+
+.testimonial {
+  width: 70%;
+}
+.testimonial__text {
+  font-size: 1.8rem;
+}
+
+/* Button Navigasi Mobile */
+.btn-mobile-nav-landingpage {
+  display: none;
 }
