--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -654,26 +654,37 @@ tbody tr td .id {
 /************************/
 /* TAMBAH DATA */
 /************************/
-.overlay {
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  right: 0;
-  left: 0;
-  background: linear-gradient(
-    135deg,
-    rgba(255, 255, 255, 0.1),
-    rgba(255, 255, 255, 0)
-  );
-  box-shadow: 0rem 0.6rem 0.6rem 0rem rgba(0, 0, 0, 0.08);
-  backdrop-filter: blur(10px);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-  z-index: 9999;
-  color: white;
-  transition: all 0.5s;
+
+.modal-tambah-data-nasabah {
+  top: 40%;
+  right: 1%;
+  transform: translateY(-50%);
 }
-.tambah-data-nasabah {
+
+.btn-close,
+.btn-close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  cursor: pointer;
+  transform: translate(-10%, 10%);
+}
+
+.add-nasabah-heading {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 0.6rem;
+  color: var(--color-dark);
+}
+
+.btn-update-data,
+.btn-delete-data {
+  background: none;
+  border: none;
+}
+
+.modal-edit-data-pegawai {
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  right: 30%;
+  transform: translateY(-50%);
 }
