--- a/assets/css/query.css
+++ b/assets/css/query.css
@@ -134,7 +134,7 @@
     gap: 0rem;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     width: fit-content;
     border-radius: 9px;
     background-color: #fff;
