--- a/assets/css/query.css
+++ b/assets/css/query.css
@@ -118,6 +118,10 @@
   .hero-heading {
     font-size: 2.6rem !important;
   }
+
+  .login {
+    grid-template-columns: 1fr 1fr !important;
+  }
 }
 
 /**************************/
@@ -126,6 +130,10 @@
 @media (max-width: 53em) {
   html {
     font-size: 56.25%;
+  }
+
+  .login {
+    grid-template-columns: 1fr 1.5fr !important;
   }
 
   .year-summary {
@@ -162,6 +170,10 @@
 /* BELOW 750px (Landingpage Phone) */
 /**************************/
 @media (max-width: 47em) {
+  .login {
+    grid-template-columns: 1fr !important;
+  }
+
   /* Navigation Landingpage Mobile */
   /* MOBILE BUTTON */
   .btn-mobile-nav-landingpage {
