--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -701,6 +701,7 @@ tbody tr td .id {
 .btn-delete-data {
   background: none;
   border: none;
+  text-decoration: none;
 }
 
 .modal-edit-data-pegawai {
