--- a/assets/css/query.css
+++ b/assets/css/query.css
@@ -186,6 +186,16 @@
     right: 2rem;
   }
 
+  .right-box-nav-nasabah {
+    gap: 1rem !important;
+    width: fit-content !important;
+    justify-content: flex-start !important;
+  }
+
+  .heading-nasabah {
+    margin-bottom: 8rem !important;
+  }
+
   .icon-mobile-nav-landingpage {
     height: 4.8rem;
     width: 4.8rem;
